--- a/on1.html
+++ b/on1.html
@@ -9,15 +9,18 @@
 
 </head>
 <body>
-    <label for="stockText">Add Stock</label>
-    <input id="stockText" type="text">
-    <button id="Add">addStock</button>
-
-    <div>
+    <h1>STOCK WATCHLIST</h1>
+    <div style="margin-bottom: 50px;"></div>
+    
+        <label for="stockText">Add Stock : </label>
+        <input placeholder="Add Stock" id="stockText" type="text">
+        <button id="Add">Add</button>
+    <div id="stock">
+        <h2>WATCHLIST :</h2>
         <ul id="stockList">
         </ul>
+    
     </div>
-
     <script src="on1.js"></script>
 </body>
 </html>
