--- a/on1.html
+++ b/on1.html
@@ -14,12 +14,14 @@
     
         <label for="stockText">Add Stock : </label>
         <input placeholder="Add Stock" id="stockText" type="text">
+        <label id="price" for="price">Price :</label>
+        <input placeholder="Price" id="priceValue" type="number">
+        <label id="value">/-</label>
         <button id="Add">Add</button>
     <div id="stock">
         <h2>WATCHLIST :</h2>
-        <ul id="stockList">
-        </ul>
-    
+        <button id="sort">Price ↑</p></button>
+        <ul id="stockList"></ul>
     </div>
     <script src="on1.js"></script>
 </body>
